name:                sukeroku
version:             0.1.0.0
synopsis:            A Haskell implementation of ICS (Internet Chess Server) compatible with FICS.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuta Sato <sato.yuta.20@gmail.com>
maintainer:          Yuta Sato <sato.yuta.20@gmail.com>
copyright:           (c) 2017 Yuta Sato
category:            Network, Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- ghc-options:         -Wall
  exposed-modules:     Sukeroku.Server
                       Sukeroku.Command
                       Sukeroku.Chess
  build-depends:       base >=4.6 && <5
                     , async
                     , containers
                     , parsec
                     , pretty
                     , random
                     , stm
                     , transformers
  default-language:    Haskell2010
  hs-source-dirs:      src

executable sukeroku
  main-is:             Sukeroku.hs
  -- ghc-options:         -Wall -threaded -rtsopts
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <5
                     , async
                     , containers
                     , network
                     , parsec
                     , pretty
                     , random
                     , stm
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
